--- a/COMP371/COMP371/COMP371.vcxproj
+++ b/COMP371/COMP371/COMP371.vcxproj
@@ -117,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="GridEntity.h" />
     <ClInclude Include="objloader.hpp" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
@@ -126,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GridEntity.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="objloader.cpp" />
     <ClCompile Include="Shader.cpp" />
